[package]
name = "mutview"
version = "0.1.2"
authors = ["Your Name <you@example.com>"]
edition = "2018"
description = "Derive macro for zordon crate"
repository = "https://github.com/Aetiology/mutview"
license-file = "LICENSE"
keywords = ["zero-copy", "parsing"]
catergories = ["data-structures", "parsing"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.64", features = ["extra-traits"] }
quote = "1.0"